[package]

name = "persistent"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.0.6"
description = "A set of middleware for sharing global data in Iron."
repository = "https://github.com/iron/persistent"
documentation = "http://ironframework.io/doc/persistent/index.html"
license = "MIT"

[dependencies]
plugin = "*"

[dependencies.iron]
git = "https://github.com/AerialX/iron.git"
branch = "feat/hyper-0.6"
default-features = false
